# pingest

./: .gitignore  README.md  pyproject.toml
scripts/api/: benchmark.py  test_req.py
scripts/pandas/: test.py
scripts/polars/: test.py  test_lazy.py
scripts/transform/: benchmark.py  benchmark_polars_pandas.py  memory_profiling.py
src/pingest/: __init__.py  cli.py  config.py  interactive.py  models.py  observability.py  pipeline.py  sink.py
src/pingest/exception_helper/: core.py
src/pingest/logging_helper/: core.py
src/pingest/models/: soccer.py
src/pingest/sources/: api.py  fetch.py  files.py  soccer_api.py  test_data.csv
src/pingest/transforms/: core.py  pandas_engine.py  polars_engine.py
tests/: transform.py
tickets/: 01_config.md  02_football_api_client.md  03_pydantic_models.md  04_fetch_modes.md  05_cli_commands.md
