[project]
name = "pingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "datleXx", email = "dat91fitzz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.26.7",
]

[project.scripts]
pingest = "pingest:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
