[project]
name = "pingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "datleXx", email = "dat91fitzz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "memory-profiler>=0.61.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "scalene>=2.3.0",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
]

[project.scripts]
pingest = "pingest.cli:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (heavy data pipelines)",
]
